# study-opencv

./: CMakeLists.txt
src/: main.cpp  show_many_images.cpp  study_math_func.cpp
